--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "leaflet": "^1.5.1",
     "next": "9.1.3",
     "react": "16.11.0",
-    "react-dom": "16.11.0"
+    "react-dom": "16.11.0",
+    "react-leaflet": "^2.5.0"
   },
   "devDependencies": {
     "@types/node": "^12.12.7",
