add treewurst as alias

--- a/now.json
+++ b/now.json
@@ -1,6 +1,7 @@
 {
     "version": 2,
     "name": "treewurst-frontend",
+    "alias": "treewurst",
     "builds": [
         {
             "src": "next.config.js",
