--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "firebase": "6.3.4",
     "leaflet": "^1.5.1",
     "next": "9.1.3",
     "react": "16.11.0",
