--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "9.1.3",
     "react": "16.11.0",
     "react-dom": "16.11.0",
-    "react-leaflet": "^2.5.0"
+    "react-leaflet": "^2.5.0",
+    "react-leaflet-heatmap-layer": "^2.0.0"
   },
   "devDependencies": {
     "@types/node": "^12.12.7",
