--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "apexcharts": "^3.10.1",
     "axios": "^0.19.0",
     "firebase": "6.3.4",
     "leaflet": "^1.5.1",
     "next": "9.1.3",
     "react": "16.11.0",
+    "react-apexcharts": "^1.3.3",
     "react-dom": "16.11.0",
     "react-leaflet": "^2.5.0",
     "react-leaflet-heatmap-layer": "^2.0.0"
